package S191220053.Task_two;

public interface Linable {
    public int getRank();
    public String getRGBInfo();
}
